add bod and first page

--- a/_support/latex/common.tex
+++ b/_support/latex/common.tex
@@ -1,5 +1,5 @@
-\pagelayout{\paperbackpage}
 
+\pagelayout{\bodpage}
 \usepackage{_support/latex/sbabook/pharo-titlepage}
 
 \usepackage{polyglossia}
