--- a/_support/latex/common.tex
+++ b/_support/latex/common.tex
@@ -1,5 +1,5 @@
-
 \pagelayout{\bodpage}
+
 \usepackage{_support/latex/sbabook/pharo-titlepage}
 
 \usepackage{polyglossia}
@@ -57,4 +57,8 @@
 
 \newenvironment{todo}{%
   \begin{leftbar}\textsf{\textbf{To do}}\quad
+}{\end{leftbar}}
+
+\newenvironment{important}{%
+  \begin{leftbar}\textsf{\textbf{Important}}\quad
 }{\end{leftbar}}
